MDEV-11436 CREATE TABLE .. AS SELECT JSON_OBJECT truncates data.

fix_length_and_dec() didn't calculate the length of the result
        properly.