sql/item_jsonfunc.cc
@@ -874,7 +874,7 @@ append_null:
 
 void Item_func_json_array::fix_length_and_dec()
 {
-  ulonglong char_length= 4;
+  ulonglong char_length= 2;
   uint n_arg;
 
   if (arg_count == 0)
@@ -889,7 +889,7 @@ void Item_func_json_array::fix_length_and_dec()
     return;
 
   for (n_arg=0 ; n_arg < arg_count ; n_arg++)
-    char_length+= args[n_arg]->max_char_length() + 2;
+    char_length+= args[n_arg]->max_char_length() + 4;
 
   fix_char_length_ulonglong(char_length);
   tmp_val.set_charset(collation.collation);
